--- a/A0/Makefile
+++ b/A0/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 #g++ -std=c++11 -O2 -mavx2 -c classify.cpp 
-CFLAGS=-std=c++11 -O2 -pg
+CFLAGS=-std=c++11 -O2 -pg -g
 
 sources=main.cpp classify.cpp
 objects=$(sources:.cpp=.o)
