--- a/A0/Makefile
+++ b/A0/Makefile
@@ -1,5 +1,4 @@
 CC=g++
-#g++ -std=c++11 -O2 -mavx2 -c classify.cpp 
 CFLAGS=-std=c++11 -O2 -pg -g
 
 sources=main.cpp classify.cpp
@@ -8,20 +7,20 @@ objects=$(sources:.cpp=.o)
 classify:$(sources)
 	$(CC) $(CFLAGS) -fopenmp $^ -o $@
 
+run: classify
+	./classify rfile dfile 1009072 4 3
+
 r = rfile
 d = dfile
 n = 1009072
 t = 4
 x = 3
 type = 1
-run: classify
+test: classify
 	./classify $(r) $(d) $(n) $(t) $(x) $(type)
 
-#classify.o: classify.h
-#	touch classify.o
-#	$(CC) $(CFLAGS) -c $<
-#main.o: classify.h
-#	$(CC) $(CFLAGS) -c $<
-
+clean: 
+	-rm classify
+	
 %.o: %.cpp classify.h
 	$(CC) $(CFLAGS) -c $<
