done parallel sort

--- a/A1/Makefile
+++ b/A1/Makefile
@@ -1,6 +1,13 @@
 all:
-	g++ -fPIC -g -c -Wall psort.cpp -fopenmp
-	g++ -shared -Wl,-soname,libsort.so -o libsort.so psort.o -lc
+	g++ -std=c++11 -fPIC -g -c -Wall psort.cpp -fopenmp
+	g++ -std=c++11 -shared -Wl,-soname,libsort.so -o libsort.so psort.o -lc
+	g++ -std=c++11 -fopenmp -Wall psort.cpp driver.cpp -o a.out
+
+data = input.txt
+thread = 4
+
+run:
+	./a.out $(data) $(thread) 
 
 clean:
-	rm *.so *.o
+	rm *.so *.o *.out
